# threejs-sage

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  version
jupyter_threejs_sage/static/r122/: three.min.js
jupyter_threejs_sage/static/r123/: three.min.js
