[metadata]
name = jupyter-threejs-sage
version = 122
description = Sage: Open Source Mathematics Software: Jupyter extension for 3D graphics with threejs
long_description = file: README.md
url = https://github.com/sagemath/threejs-sage
license = MIT License
author = The Sage Developers
author_email = sage-support@googlegroups.com
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Framework :: Jupyter

[options]
zip_safe = False
include_package_data = True
packages =
    jupyter_threejs_sage

[options.package_data]
jupyter_threejs_sage = jupyter_threejs_sage/static
